# MagicAI

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README copy.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.lock.txt  requirements.txt  resultado2.txt  resultado_performance.txt  resultado_performance_rules_clean.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
community_feedback/: README.md
database/: schema.sql
docs/: API_CONTRACT.md  ARCHITECTURE.md  BRANCHING.md  COMMANDS.md  COMMUNITY_FEEDBACK_GAUNTLET.md  CONTRIBUTING.md  DEV_COMMANDS.md  JUDGE_RESULT.md  JUDGE_TOOL_GATEWAY.md  LICENSING.md  PHILOSOPHY.md  QUICKSTART.md  RELEASE_PROCESS.md  REPOSITORY_HEALTH.md  ROADMAP.md  STATUS.md  TACTICIAN.md  TACTICIAN_REASONING.md  UI.md
magicai/: __init__.py  answer_generator.py  context.py  context_builder.py  context_enricher.py  database.py  importer.py  judge_result.py  knowledge_builder.py  models.py  oracle_abilities.py  rules.py  rules_parser.py  scryfall.py  versioning.py
scripts/: assistant.py  build_database.py  build_models.sh  ci_check.py  download_rules.sh  download_sources.sh  explore_scryfall.py  export_github_analysis.sh  package_release.py  promote_tactician_feedback.py  search_card.py  search_rule.py  update_scryfall_symbology.py
tests/: selftest.sh  test_assistant.py  test_chat.py  test_context.py  test_enricher.py  test_extractors.py  test_importer.py  test_knowledge.py  test_performance.py  test_qwen.py  test_rules.py
tools/: backup.sh
(+233 files in other folders)
