[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "magicai"
version = "0.1.0"
description = "Local, source-grounded Magic: The Gathering Judge assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"

[tool.setuptools.packages.find]
include = ["magicai*"]
namespaces = true
