[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magicai"
version = "0.1.1b0"
description = "Local, source-grounded Magic: The Gathering Judge assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastapi>=0.139.2,<0.140.0",
    "pydantic>=2.13.4,<3.0.0",
    "requests>=2.34.2,<3.0.0",
    "uvicorn>=0.50.2,<0.52.0",
]

[tool.setuptools.packages.find]
include = ["magicai*"]
namespaces = true

[tool.setuptools.package-data]
magicai = ["ui/static/*.html", "ui/static/*.css", "ui/static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["backups"]
